setting up the layer loading component, functions for working with the map and features

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -5,8 +5,9 @@
     .ant-tabs-content-holder {
         padding: 0;
         overflow: hidden;
+        flex-grow: 1;
+        overflow-y: auto;
     }
-
 
     // .ant-upload.ant-upload-drag {
     //     min-height: 40px;
