--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/UploadLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/UploadLayer.less
@@ -1,62 +1,108 @@
-.item-title {
-    min-width: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.custom-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
+.ant-upload-wrapper .ant-upload-drag {
+    position: relative;
+    width: auto;
+    height: 100%;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.02);
+    border: 1px dashed #d9d9d9;
+    border-radius: 4px;
     cursor: pointer;
+    transition: border-color 0s;
+    margin: 5px;
 }
 
-.icon-symbol {
-    font-size: 18px;
-    width: 24px;
-    height: 24px;
+.item-list {
     display: flex;
-    justify-items: center;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    flex: 0 0 auto;
+    margin: 5px;
+    user-select: none;
 
-    &:hover {
-        color: #106a90;
-        background: #ffffff00;
+    .checkbox-item {
+        min-width: 0;
+
+        .ant-checkbox-wrapper {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            color: rgba(0, 0, 0, 0.88);
+            font-size: 14px;
+            line-height: 1.5714285714285714;
+            list-style: none;
+            font-family: "Roboto", sans-serif;
+            display: inline-flex;
+            align-items: baseline;
+            cursor: pointer;
+            width: 100%;
+
+            .ant-checkbox {
+                overflow: visible;
+            }
+
+            span {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
     }
+
+    .custom-button {
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+        cursor: pointer;
+    }
+
+    .icon-symbol {
+        font-size: 18px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 auto;
+        color: #106a90;
+    }
+
+
 }
+
+
+
 
 .feature-info-block {
-    cursor: pointer;
-    margin: 0 10px 5px 10px;
-    padding: 5px;
-    border: 0.005em solid #efefef;
-    border-radius: 2px;
-
-    &:hover {
-        background-color: #00000005;
+    .feature-item {
+        cursor: pointer;
+        margin: 0 10px 5px 10px;
+        padding: 5px;
+        border: 0.005em solid #efefef;
         border-radius: 2px;
-    }
 
-    .feature-info {
-        white-space: nowrap;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 24px;
-        border-bottom: 0.005em solid #00000020;
-        font-size: 13px;
-
-        .title-info {
-            margin: 0 10px 0 0;
+        &:hover {
+            background-color: #00000005;
+            border-radius: 2px;
         }
 
-        .value-info {
+        .feature-info {
             white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            height: 24px;
+            border-bottom: 0.005em solid #00000020;
+            font-size: 13px;
+
+            .title-info {
+                margin: 0 10px 0 0;
+            }
+
+            .value-info {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         }
     }
 }
