--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -7,161 +7,6 @@
         overflow: hidden;
         flex-grow: 1;
         overflow-y: auto;
+        border: none;
     }
-
-    // .ant-upload.ant-upload-drag {
-    //     min-height: 40px;
-    //     display: flex;
-    //     height: fit-content;
-    //     align-items: center;
-    //     margin: 5px;
-    //     width: auto;
-    // }
-
-    // .ant-card-bordered {
-    //     border: none;
-    // }
-
-    // .ant-btn-primary.ant-btn-background-ghost {
-    //     background: #ffffff;
-    //     border-color: #d9d9d9;
-    //     color: rgba(0, 0, 0, 0.88);
-    //     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02);
-    // }
-
-    // .ant-upload.ant-upload-drag p.ant-upload-drag-icon .anticon {
-    //     color: var(--primary);
-    //     font-size: 24px;
-    // }
-
-    // .ant-upload.ant-upload-drag .ant-upload-btn {
-    //     display: table;
-    // }
-
-    // .ant-upload.ant-upload-drag .anticon-plus {
-    //     color: rgba(0, 0, 0, .25);
-    //     font-size: 24px;
-    //     transition: all .3s;
-    // }
-
-    // .ant-upload.ant-upload-drag p.ant-upload-text {
-    //     color: rgba(0, 0, 0, .85);
-    //     font-size: 14px;
-    //     margin: 0;
-    // }
-
-    // .ant-upload.ant-upload-drag p.ant-upload-drag-icon {
-    //     margin-bottom: 0;
-    // }
-
-    // .layer-list-block {
-    //     margin: 5px;
-    //     padding: 5px 0px 5px 5px;
-
-    //     .layer-item {
-    //         display: flex;
-    //         align-items: center;
-    //         justify-content: space-between;
-    //         margin: 0 0 5px 0;
-
-    //         .layer-item-title {
-    //             min-width: 0;
-    //             white-space: nowrap;
-    //             overflow: hidden;
-    //             text-overflow: ellipsis;
-    //             cursor: pointer;
-
-    //             .title {
-    //                 margin: 0 0 0 10px;
-    //             }
-
-    //             &:hover {
-    //                 color: #106a90;
-    //             }
-    //         }
-
-    //         .custom-button {
-    //             display: flex;
-    //             flex-direction: row;
-    //             justify-content: end;
-    //             cursor: pointer;
-    //         }
-
-    //         .icon-symbol {
-    //             font-size: 18px;
-    //             width: 24px;
-    //             height: 24px;
-    //             display: flex;
-    //             justify-items: center;
-    //             justify-content: center;
-    //             align-items: center;
-    //             flex: 0 0 auto;
-
-    //             &:hover {
-    //                 color: #106a90;
-    //             }
-    //         }
-    //     }
-    // }
-
-    // .delete-all-layer {
-    //     display: flex;
-    //     margin: 5px;
-    //     justify-content: flex-end;
-    //     font-size: 12px;
-    // }
-
-    // .ant-card-small>.ant-card-body {
-    //     .ant-row {
-    //         display: flex;
-    //         align-items: center;
-    //         justify-content: space-between;
-    //         padding: 5px 0 0 0;
-    //     }
-    // }
-
-    // .ant-card-body {
-    //     padding: 0;
-    // }
-
-    // .ant-card-head {
-    //     border-bottom: none;
-    // }
-
-    // .ant-card-small>.ant-card-head>.ant-card-head-wrapper>.ant-card-extra {
-    //     font-size: 14px;
-    // }
-
-    // .feature-info-block {
-    //     cursor: pointer;
-    //     margin: 0 10px 5px 10px;
-    //     padding: 5px;
-    //     border: 0.005em solid #efefef;
-    //     border-radius: 2px;
-
-    //     &:hover {
-    //         background-color: #00000005;
-    //         border-radius: 2px;
-    //     }
-
-    //     .feature-info {
-    //         white-space: nowrap;
-    //         display: flex;
-    //         align-items: center;
-    //         justify-content: space-between;
-    //         height: 24px;
-    //         border-bottom: 0.005em solid #00000020;
-    //         font-size: 13px;
-
-    //         .title-info {
-    //             margin: 0 10px 0 0;
-    //         }
-
-    //         .value-info {
-    //             white-space: nowrap;
-    //             overflow: hidden;
-    //             text-overflow: ellipsis;
-    //         }
-    //     }
-    // }
 }
