--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/UploadLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/UploadLayer.less
@@ -9,7 +9,19 @@
     cursor: pointer;
     transition: border-color 0s;
     margin: 5px;
+
+    .ant-upload {
+        padding: 5px;
+    }
+
+    .ant-space-gap-col-small {
+        column-gap: 0px;
+    }
+    .ant-space-gap-row-small {
+        row-gap: 0px;
+    }
 }
+
 
 .item-list {
     display: flex;
@@ -75,10 +87,10 @@
 .feature-info-block {
     .feature-item {
         cursor: pointer;
-        margin: 0 10px 5px 10px;
+        margin: 10px 5px;
         padding: 5px;
-        border: 0.005em solid #efefef;
         border-radius: 2px;
+        box-shadow: 0px 0px 5px 1px #02223c33;
 
         &:hover {
             background-color: #00000005;
@@ -91,8 +103,8 @@
             align-items: center;
             justify-content: space-between;
             height: 24px;
-            border-bottom: 0.005em solid #00000020;
-            font-size: 13px;
+            border-bottom: 0.005em solid #00000010;
+            font-size: 14px;
 
             .title-info {
                 margin: 0 10px 0 0;
