--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/UploadLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/UploadLayer.less
@@ -3,8 +3,9 @@
     .info-file {
         display: flex;
         align-items: center;
-        padding: 5px;
+        padding: 0 5px;
         justify-content: space-between;
+        height: 32px;
     }
 
 
