fixing dropdown menu button style and label

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -2,6 +2,7 @@
     .ant-collapse-content-box {
         padding: 0;
     }
+
     .ant-tabs-content-holder {
         padding: 0;
         overflow: hidden;
@@ -14,4 +15,25 @@
         padding: 5px;
     }
 
+    .button-operation {
+        display: flex;
+
+        .status-operation {
+            padding: 0 4px 0px 0px;
+        }
+    }
+}
+
+.label-type {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .label {
+        padding: 0 4px 0px 0px;
+    }
+
+    .icon {
+        padding: 0 0 0 4px;
+    }
 }
