--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -33,3 +33,31 @@
         padding: 0 0 0 4px;
     }
 }
+
+
+.info-file {
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
+    justify-content: space-between;
+    height: 32px;
+}
+
+.custom-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    cursor: pointer;
+}
+
+.icon-symbol {
+    font-size: 18px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    color: #106a90;
+}
