--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -18,10 +18,11 @@
     display: flex;
     flex-direction: row;
     justify-content: end;
-    cursor: pointer;
+    cursor: auto;
 }
 
 .icon-symbol {
+    cursor: pointer;
     font-size: 18px;
     width: 24px;
     height: 24px;
@@ -31,6 +32,18 @@
     align-items: center;
     flex: 0 0 auto;
     color: #106a90;
+}
+
+.icon-symbol-disable {
+    font-size: 18px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    color: #acacac;
 }
 
 .checkbox-item {
