--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -1,5 +1,18 @@
 .dropdown-button {
     padding: 5px 0px;
+
+    .ant-space-compact-block {
+        display: flex;
+        width: 100%;
+        justify-content: flex-end;
+
+
+        .ant-btn-compact-first-item.ant-btn-sm {
+            border-start-end-radius: 0;
+            border-end-end-radius: 0;
+            width: 100%;
+        }
+    }
 }
 
 .layer-name-input {
