Modal window test, styling tweaks and bug fixes. Fix open webmap display

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -87,3 +87,43 @@
         }
     }
 }
+
+.modal-style {
+    .select-format{
+        display: flex;
+        align-items: center;
+
+        .select-title {
+            padding: 0 10px 0 0;
+        }
+    }
+    .ant-modal-content {
+        position: relative;
+        background-color: #ffffff;
+        background-clip: padding-box;
+        border: 0;
+        border-radius: 4px;
+        box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+        pointer-events: auto;
+        padding: 16px 16px;
+    }
+    .ant-modal-close {
+        position: absolute;
+        top: 10px;
+        inset-inline-end: 10px;
+        z-index: 1010;
+        padding: 0;
+        color: rgba(0, 0, 0, 0.45);
+        font-weight: 500;
+        line-height: 1;
+        text-decoration: none;
+        background: transparent;
+        border-radius: 4px;
+        width: 22px;
+        height: 22px;
+        border: 0;
+        outline: 0;
+        cursor: pointer;
+        transition: color 0s, background-color 0s;
+    }
+}
