test custom toggle button icon

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -19,6 +19,11 @@
     margin: 0;
 }
 
+.item-control {
+    display: flex;
+    padding: 0 5px;
+}
+
 .layer-item {
     display: flex;
     justify-content: space-between;
