--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -94,7 +94,7 @@
 }
 
 .modal-style {
-    .select-format{
+    .select-format {
         display: flex;
         align-items: center;
 
@@ -102,6 +102,7 @@
             padding: 0 10px 0 0;
         }
     }
+
     .ant-modal-content {
         position: relative;
         background-color: #ffffff;
@@ -112,6 +113,7 @@
         pointer-events: auto;
         padding: 16px 16px;
     }
+
     .ant-modal-close {
         position: absolute;
         top: 10px;
@@ -130,5 +132,47 @@
         outline: 0;
         cursor: pointer;
         transition: color 0s, background-color 0s;
+    }
+}
+
+.control {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5px;
+
+    .control-button {
+        display: flex;
+        .button-active {
+            margin: 0 2px;
+
+            .icon-symbol-active {
+                box-shadow: inset 0px 0px 3px 0px #797979;
+                border-radius: 3px;
+                cursor: pointer;
+                font-size: 17px;
+                width: 24px;
+                height: 24px;
+                display: flex;
+                justify-items: center;
+                justify-content: center;
+                align-items: center;
+                flex: 0 0 auto;
+                color: #106a90;
+            }
+
+            &:hover {
+                background-color: #acacac20;
+                border-radius: 3px;
+            }
+        }
+
+        .button-disable {
+            margin: 0 2px;
+            pointer-events: none;
+
+            svg {
+                color: #acacac;
+            }
+        }
     }
 }
