added button controls for the snap tool

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -4,7 +4,7 @@
     }
 
     .ant-tabs-content-holder {
-        padding: 0;
+        padding: 1px;
         overflow: hidden;
         flex-grow: 1;
         overflow-y: auto;
