snap multiple layer

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -137,7 +137,7 @@
 
 .control {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 0 5px;
     
     .control-button {
