added separate drawing and modify mode

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -50,6 +50,7 @@
     align-items: center;
     flex: 0 0 auto;
     color: #106a90;
+
     &:hover {
         background-color: #acacac20;
         border-radius: 3px;
@@ -59,6 +60,7 @@
 .icon-edit {
     box-shadow: inset 0px 0px 3px 0px #797979;
     border-radius: 3px;
+
     &:hover {
         background-color: #acacac20;
         border-radius: 3px;
@@ -81,8 +83,13 @@
     color: #acacac;
 }
 
+.input-button-none {
+    display: none;
+}
+
 .checkbox-item {
     min-width: 0;
+    user-select: none;
 
     .ant-checkbox-wrapper {
         box-sizing: border-box;
@@ -157,7 +164,7 @@
     justify-content: flex-end;
     padding: 3px 5px;
     border-bottom: solid #efefef 0.005em;
-    
+
     .control-button {
         display: flex;
 
@@ -196,6 +203,7 @@
                 box-shadow: none;
                 color: #106a90;
             }
+
             &:hover {
                 background-color: #acacac20;
                 border-radius: 3px;
@@ -205,6 +213,7 @@
         .button-disable {
             margin: 0 4px;
             pointer-events: none;
+
             .icon-symbol-yes {
                 box-shadow: none;
                 color: #acacac;
