--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -121,6 +121,7 @@
     white-space: nowrap;
     padding: 0 0 0 5px;
     font-size: small;
+    width: 100%;
 
     &:hover {
         background: rgba(247, 247, 247, 1);
