--- a/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
@@ -2,7 +2,7 @@
     display: flex;
     row-gap: 2px;
     flex-direction: column;
-    margin-left: -22px;
+    margin-left: -20px;
 
     .legend-item {
         display: flex;
@@ -20,13 +20,22 @@
 
         > .ant-checkbox-wrapper {
             align-self: start;
-            scale: 0.75;
         }
 
         > .legend-title {
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+        }
+
+        .ant-checkbox-checked .ant-checkbox-inner {
+            border-color: #d9d9d9;
+            border: dotted #d9d9d9 0.005em;
+        }
+
+        .ant-checkbox .ant-checkbox-inner {
+            border-color: #d9d9d9;
+            border: dotted #d9d9d9 0.005em;
         }
     }
 }
