--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -1,5 +1,7 @@
 .dropdown-button {
+    display: flex;
     padding: 5px 0px;
+    align-items: center;
 
     .ant-space-compact-block {
         display: flex;
@@ -71,8 +73,12 @@
     color: #ff0000;
 }
 
+.icon-edit-auto {
+    margin: 0 0px 0 10px;
+}
+
 .icon-edit-margin {
-    margin: 0 2px;
+    margin: 0 8px 0 2px;
 }
 
 .icon-edit-no {
@@ -170,7 +176,7 @@
 .control {
     display: flex;
     justify-content: space-between;
-    padding: 5px 3px 5px 5px;
+    padding: 5px 1px 5px 5px;
     align-items: center;
 
     .control-button {
@@ -231,5 +237,33 @@
                 color: #acacac;
             }
         }
+    }
+}
+
+.ant-radio-group {
+    display: block;
+}
+
+.radio-custom {
+
+    .ant-radio-wrapper {
+        color: #ccc;
+        margin-inline-start: 0;
+        margin-inline-end: 0;
+
+        span.ant-radio+* {
+            padding-inline-start: 0;
+            padding-inline-end: 0;
+        }
+    }
+
+    .ant-radio-wrapper-checked {
+        color: var(--primary);
+    }
+
+    .ant-radio {
+        position: absolute;
+        left: -9999px;
+        overflow: hidden;
     }
 }
