--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -20,21 +20,6 @@
     }
 }
 
-.label-type {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    .label {
-        padding: 0 4px 0px 0px;
-    }
-
-    .icon {
-        padding: 0 0 0 4px;
-    }
-}
-
-
 .info-file {
     display: flex;
     align-items: center;
@@ -60,4 +45,9 @@
     align-items: center;
     flex: 0 0 auto;
     color: #106a90;
+
+    &:hover {
+        background-color: #acacac20;
+        border-radius: 3px;
+    }
 }
