Description of the style and layer. Layer settings in the menu.

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/DrawFeatures.less
@@ -1,3 +1,17 @@
+.label-type {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .label {
+        padding: 0 4px 0px 0px;
+    }
+
+    .icon {
+        padding: 0 0 0 4px;
+    }
+}
+
 .dropdown-button-draw {
     .dropdown-button {
         display: flex;
