--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -33,13 +33,35 @@
         margin-inline-start: 5px;
         margin-inline-end: 5px;
     }
+
     .p-padding {
         display: block;
         margin-block-start: 0;
         margin-block-end: 0;
         margin-inline-start: 5px;
         margin-inline-end: 5px;
+        margin: 5px 0px;
     }
 
-}
+    .item-description {
+        margin: 0px 5px 10px 5px;
 
+        .titleDesc {
+            display: flex;
+            align-items: center;
+            padding: 2px;
+            border-bottom: dotted #eee 0.005em;
+
+            .icon {
+                width: 14px;
+            }
+
+            .labelDesc {
+                padding: 0 0 0 10px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+    }
+}
