--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -62,6 +62,10 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
+            .desc-link {
+                display: flex;
+                align-items: center;
+            }
         }
     }
 }
