--- a/nextgisweb/webmap/amd/ngw-webmap/ol/resource/Popup.css
+++ b/nextgisweb/webmap/amd/ngw-webmap/ol/resource/Popup.css
@@ -5,8 +5,17 @@
 .ngwPopup__title {
     background-color: #eee;
     padding: 2px 4px 0;
+    display: flex;
+    align-items: center;
 }
 
 .ngwPopup .dijitTooltipContainer {
     overflow: hidden;
+}
+.ngwPopup .featureLink {
+    padding: 0 0 0 5px;
+}
+
+.ngwPopup .featureLink--nofeature {
+    display: none;
 }
