--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -1,64 +1,39 @@
 .ngw-webmap-diagram-panel {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    overflow: auto;
 
-    .results {
-        padding: 2px;
-        flex: auto;
-        overflow-y: auto;
+    .diagram-content {
+        height: 750px;
+        padding: 5px;
+    }
 
-        .request-block-list{
-            display: flex;
-            flex-direction: column;
-        }
-        
-        .request-block {
-            margin-bottom: 10px;
-            margin-top: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            .float-input-label {
-                margin-top: -16px;
-                display: flex;
-                flex-direction: column;
-            }
-
-            .float-input-label .float {
-                top: 6px;
-                left: 5px;
-                background-color: white;
-                padding: 0 3px;
-                color: #808080;
-                font-size: 10px;
-                z-index: 10;
-                position: relative;
-                width: max-content;
-            }
-
-        }
-
-        .diagram-button-old-new {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            width: 100%;
-            padding: 0 0 5px 0;
-        }
-
-        .diagram-content {
-            height: 350px;
-        }
-
-        .ant-divider-horizontal {
-            display: flex;
-            clear: both;
-            width: 100%;
-            min-width: 100%;
-            margin: 5px 0 10px 0;
+    .icon-symbol {
+        font-size: 18px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 auto;
+        color: #106a90;
+    
+        &:hover {
+            background-color: #acacac20;
+            border-radius: 3px;
         }
     }
 
+    .item-graph {
+        display: flex;
+        justify-content: space-between;
+        margin: 5px;
+        align-items: center;
+    }
+    .item-control {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
