fixed adding a button to edit object attributes

--- a/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
+++ b/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
@@ -8,4 +8,23 @@
     a {
         color: #106a90;
     }
+
+    .img-style {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        
+        .img-item {
+            width: 50%;
+        }
+    }
+
+    .p-padding {
+        display: block;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        margin-inline-start: 5px;
+        margin-inline-end: 5px;
+        margin: 5px;
+    }
 }
