--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -1,5 +1,4 @@
 .ngw-webmap-description-panel {
-
     span {
         display: block;
         overflow-wrap: break-word;
@@ -17,7 +16,15 @@
     .imgDesc {
         height: auto;
     }
-
+    .img-style {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        
+        .img-item {
+            width: 50%;
+        }
+    }
     .image {
         display: block;
         margin-block-start: 0em;
@@ -25,6 +32,7 @@
         margin-inline-start: 5px;
         margin-inline-end: 5px;
     }
+
 
     p {
         display: block;
@@ -40,7 +48,7 @@
         margin-block-end: 0;
         margin-inline-start: 5px;
         margin-inline-end: 5px;
-        margin: 5px 0px;
+        margin: 5px;
     }
 
     .item-description {
@@ -62,6 +70,7 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
+
             .desc-link {
                 display: flex;
                 align-items: center;
