added IdentifyModule to the card control code

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -21,6 +21,11 @@
     user-select: text;
     pointer-events: auto;
 
+    .context-title {
+        font-weight: 600;
+        padding: 5px;
+    }
+
     .context-item {
         cursor: pointer;
         padding: 5px;
