createPortal testing popup

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -9,6 +9,12 @@
     line-height: 0;
 }
 
+popup-container {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+}
+
 .icon-position-popup {
     left: -5px;
     top: -5px;
