--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -26,30 +26,28 @@ popup-container {
 }
 
 .context-position {
-    left: 0;
-    top: 0;
     position: absolute;
     padding: 0;
     min-width: 150px;
-    background-color: white;
-    border-top-left-radius: 0;
-    border-top-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border: solid 1px #106a90;
+    background: #ffffff;
+    border-radius: 3px;
+    border: solid 0px #106a90;
     user-select: text;
     pointer-events: auto;
 
     .context-title {
         font-weight: 600;
+        display: flex;
         padding: 5px;
+        justify-content: center;
+        align-items: center;
     }
 
     .context-item {
         cursor: pointer;
         padding: 5px;
         user-select: none;
-        
+
         &:hover {
             background-color: #F5F5F5;
             padding: 5px;
