--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -2,8 +2,8 @@
     right: -9px;
     top: -9px;
     position: absolute;
-    width: 18px;
-    height: 18px;
+    width: 21px;
+    height: 21px;
     color: var(--primary);
     pointer-events: none;
     line-height: 0;
@@ -11,23 +11,47 @@
 
 .popup-position {
     border-radius: 3px;
-    border: solid 1px var(--primary);
+    border: solid var(--divider-color) 1px;
+    box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     background: #fff;
     position: absolute;
+    right: 10px;
+    top: 50px;
 
-    .title{
-        font-weight: 500;
+    .title {
         display: flex;
-        padding: 0px 5px;
-        justify-content: center;
+        padding: 0;
+        justify-content: space-between;
         align-items: center;
         border-bottom: solid var(--divider-color) 1px;
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
+
+        .title-name {
+            font-weight: 500;
+            padding: 0 5px;
+            user-select: none;
+        }
+
+        .icon-symbol {
+            font-size: 18px;
+            width: 24px;
+            height: 24px;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+            flex: 0 0 auto;
+            color: #106a90;
+
+            &:hover {
+                background-color: #acacac20;
+                border-radius: 3px;
+            }
+        }
     }
 
     .content {
-        font-weight: 500;
         display: flex;
         padding: 0px 5px;
         justify-content: center;
@@ -54,11 +78,12 @@
     min-width: 100px;
     background: #ffffff;
     border-radius: 3px;
-    border: solid 0px #106a90;
+    border: solid var(--divider-color) 1px;
     user-select: text;
     pointer-events: auto;
+    box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 
-    .context-title {
+    .context-coords {
         font-weight: 500;
         display: flex;
         padding: 0px 5px;
@@ -67,6 +92,7 @@
         border-bottom: solid var(--divider-color) 1px;
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
+        cursor: pointer;
     }
 
     .context-item {
