obtaining attribute information the basis of the previous identification module, code optimization

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -1,6 +1,6 @@
 .icon-position {
-    right: -9px;
-    top: -9px;
+    right: -15px;
+    top: -7px;
     position: absolute;
     width: 21px;
     height: 21px;
@@ -8,7 +8,9 @@
     pointer-events: none;
     line-height: 0;
 }
-
+[hidden] {
+    display: none !important;
+}
 .popup-position {
     border-radius: 3px;
     border: solid var(--divider-color) 1px;
