--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -63,15 +63,6 @@
         position: absolute;
         width: 100%;
 
-        .ant-tabs-top >.ant-tabs-nav {
-            margin: 0 5px;
-        }
-
-        .ant-tabs-small >.ant-tabs-nav .ant-tabs-tab {
-            padding: 4px 0;
-            font-size: 14px;
-        }
-
         .item-content {
             display: flex;
             padding: 2px;
@@ -133,4 +124,8 @@
             border-radius: 3px;
         }
     }
+}
+
+.ant-tooltip {
+    pointer-events: none !important;
 }
