The position of the popup at the point of click, with the ability to drag.

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -19,8 +19,8 @@
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     background: #fff;
     position: absolute;
-    right: 10px;
-    top: 50px;
+    // right: 10px;
+    // top: 50px;
     content: "";
     display: flex;
     clear: both;
