test store, test react-rnd

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -14,7 +14,6 @@
 }
 
 .popup-position {
-    height: 100%;
     width: 100%;
     justify-content: space-between;
     border-radius: 3px;
@@ -65,8 +64,8 @@
 
     .content {
         overflow: hidden;
-        position: absolute;
-        top: 25px;
+        // position: absolute;
+        // top: 25px;
         border-bottom: solid var(--divider-color) 1px;
         width: 100%;
         .item-content {
