test rnd, store and api identify

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -64,13 +64,11 @@
 
     .content {
         overflow: hidden;
-        // position: absolute;
-        // top: 25px;
         border-bottom: solid var(--divider-color) 1px;
         width: 100%;
         .item-content {
             display: flex;
-            padding: 5px;
+            padding: 5px 0px 5px 5px;
             word-break: break-word;
             overflow: auto;
         }
