--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -15,6 +15,7 @@
 
 .popup-position {
     width: 100%;
+    height: 100%;
     justify-content: space-between;
     border-radius: 3px;
     border: solid var(--divider-color) 1px;
@@ -66,6 +67,7 @@
         overflow: hidden;
         border-bottom: solid var(--divider-color) 1px;
         width: 100%;
+        height: 100%;
         .item-content {
             display: flex;
             padding: 5px 0px 5px 5px;
