--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -18,7 +18,7 @@
     height: 100%;
     justify-content: space-between;
     border-radius: 3px;
-    border: solid var(--divider-color) 1px;
+    border: solid var(--primary) 1px;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     position: absolute;
     content: "";
@@ -29,35 +29,45 @@
 
     .title {
         display: flex;
-        padding: 0;
+        padding: 3px;
         justify-content: space-between;
         align-items: center;
         border-bottom: solid var(--divider-color) 1px;
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
 
         .title-name {
             font-weight: 500;
             padding: 0 5px;
             width: 100%;
             cursor: move;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
+            .object-select {
+                padding: 0 16px 0 0;
+            }
+
+            .layer-name {
+                font-family: var(--ngw-head-font-family-list);
+                font-weight: var(--ngw-text-font-weight);
+            }
         }
 
         .icon-symbol {
-            font-size: 14px;
-            width: 16px;
-            height: 16px;
+            font-size: 20px;
+            width: 20px;
+            height: 20px;
             display: flex;
             justify-items: center;
             justify-content: center;
             align-items: center;
             flex: 0 0 auto;
-            color: var(--primary);
             margin: 0 4px 0 4px;
             cursor: pointer;
 
             &:hover {
                 background-color: var(--divider-color);
+                color: var(--primary);
                 border-radius: 3px;
             }
         }
@@ -68,6 +78,7 @@
         border-bottom: solid var(--divider-color) 1px;
         width: 100%;
         height: 100%;
+
         .item-content {
             display: flex;
             padding: 0;
@@ -78,6 +89,33 @@
 
             .item {
                 padding: 5px;
+
+                .item-fields {
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 2px;
+                    border-bottom: solid var(--divider-color) 0.005em;
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.025);
+                        border-radius: 3px;
+                    }
+                    .label {
+                        display: flex;
+                        padding: 0 10px 0 0;
+                        align-items: center;
+                    }
+                    .padding-item {
+                        background-color: antiquewhite;
+                    }
+                    .value {
+                        max-width: 75%;
+                    }
+
+                    .text-ellipsis {
+                        display: flex;
+                        word-break: break-all;
+                    }
+                }
             }
         }
     }
