--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -29,7 +29,7 @@
 
     .title {
         display: flex;
-        padding: 3px;
+        padding: 0;
         justify-content: space-between;
         align-items: center;
         border-bottom: solid var(--divider-color) 1px;
