--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -117,6 +117,10 @@
                     }
                 }
             }
+
+            .ant-empty-image {
+                height: 20px;
+            }
         }
     }
 
