--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -73,19 +73,32 @@
         }
     }
 
+
+
     .content {
         overflow: hidden;
-        border-bottom: solid var(--divider-color) 1px;
         width: 100%;
         height: 100%;
 
-        .item-content {
-            display: flex;
-            padding: 0;
-            word-break: break-word;
-            overflow: auto;
-            flex-direction: column;
-            height: 100%;
+        .ant-tabs-nav {
+            margin: 0px;
+            height: 32px;
+        }
+
+        .content-tabs {
+            overflow: hidden;
+            border-bottom: solid var(--divider-color) 1px;
+            width: 100%;
+            height: calc(100% - 24px);
+
+            .ant-tabs-content-holder {
+                display: flex;
+                padding: 0;
+                word-break: break-word;
+                overflow: auto;
+                flex-direction: column;
+                height: 100%;
+            }
 
             .item {
                 padding: 5px;
@@ -95,18 +108,22 @@
                     justify-content: space-between;
                     padding: 2px;
                     border-bottom: solid var(--divider-color) 0.005em;
+
                     &:hover {
                         background-color: rgba(0, 0, 0, 0.025);
                         border-radius: 3px;
                     }
+
                     .label {
                         display: flex;
                         padding: 0 10px 0 0;
                         align-items: center;
                     }
+
                     .padding-item {
                         background-color: antiquewhite;
                     }
+
                     .value {
                         max-width: 75%;
                     }
@@ -122,6 +139,8 @@
                 height: 20px;
             }
         }
+
+
     }
 
     .footer-popup {
